[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "substreams"
version = "0.0.1"
authors = [
  { name="Ryan Sudhakaran", email="ryan.sudhakaran@messari.io" },
]
description = "WIP Substreams Python Adapter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pandas==1.5.1',
  'protobuf==3.20.1',
  'grpcio==1.50.0',
  'grpcio-tools==1.48.2',
  'ipykernel==6.17.0'
]